--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- =================================================
-Theme Name: Party Bootstrap Theme 
-Author: WebThemez.com
-License: https://webthemez.com/license
+Theme Name: Nexnova
+Author: nexnovatechnologies.com
+License: https://nexnovatechnologies.com/license
 ======================================================= -->
 
 <!DOCTYPE html>
@@ -13,7 +13,7 @@ License: https://webthemez.com/license
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
-  <meta content="Author" name="WebThemez">
+  <meta content="Author" name="nexnovatechnologies">
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
