--- a/index.html
+++ b/index.html
@@ -100,195 +100,226 @@ License: https://nexnovatechnologies.com/license
   </section><!-- #intro -->
 
   <main id="main">
+
+
     <!--==========================
   Services Section
 ============================-->
-    <section id="services">
-      <div class="container">
-        <div class="section-header">
-          <h2>Our Expertise</h2>
-          <p>At Nexnova, we bring cutting-edge solutions to life through our diverse range of services, empowering
-            individuals and businesses to thrive in a digital world.</p>
+    <section class="services-section">
+      <div class="tech-particles"></div>
+
+      <div class="section-header">
+        <h2>Our Expertise</h2>
+        <p>Empowering digital transformation through innovative solutions and cutting-edge technologies</p>
+      </div>
+
+      <div class="services-grid">
+        <div class="service-card">
+          <div class="service-icon">
+            <i class="fa fa-graduation-cap"></i>
+          </div>
+          <h3 class="service-title">Training & Bootcamps</h3>
+          <p class="service-description">Immersive learning experiences in Flutter, Python, and ERPNext, designed to
+            transform beginners into industry-ready professionals.</p>
         </div>
 
-        <div class="row">
-
-          <!-- Training & Bootcamps -->
-          <div class="col-lg-4">
-            <div class="box wow fadeInLeft">
-              <div class="icon"><i class="fa fa-graduation-cap"></i></div>
-              <h4 class="title"><a href="">Training & Bootcamps</a></h4>
-              <p class="description">Empowering students and professionals through immersive training in Flutter,
-                Python,
-                ERPNext, and more to enhance their career prospects.</p>
-            </div>
+        <div class="service-card">
+          <div class="service-icon">
+            <i class="fa fa-code"></i>
           </div>
-
-          <!-- Web Development -->
-          <div class="col-lg-4">
-            <div class="box wow fadeInRight">
-              <div class="icon"><i class="fa fa-code"></i></div>
-              <h4 class="title"><a href="">Web & App Development</a></h4>
-              <p class="description">Creating innovative, responsive websites and mobile applications tailored to meet
-                your
-                business goals and user expectations.</p>
-            </div>
-          </div>
-
-          <!-- Community Building -->
-          <div class="col-lg-4">
-            <div class="box wow fadeInLeft" data-wow-delay="0.2s">
-              <div class="icon"><i class="fa fa-users"></i></div>
-              <h4 class="title"><a href="">Community Programs</a></h4>
-              <p class="description">Building strong developer communities through hackathons, workshops, and
-                collaborations
-                to nurture innovation and talent.</p>
-            </div>
-          </div>
-
-          <!-- ERP Solutions -->
-          <div class="col-lg-4">
-            <div class="box wow fadeInRight" data-wow-delay="0.4s">
-              <div class="icon"><i class="fa fa-sitemap"></i></div>
-              <h4 class="title"><a href="">ERP Solutions</a></h4>
-              <p class="description">Streamlining business operations with tailored ERPNext implementations for small
-                and
-                medium enterprises.</p>
-            </div>
-          </div>
-
-          <!-- Digital Marketing -->
-          <div class="col-lg-4">
-            <div class="box wow fadeInLeft" data-wow-delay="0.6s">
-              <div class="icon"><i class="fa fa-bullhorn"></i></div>
-              <h4 class="title"><a href="">Digital Marketing</a></h4>
-              <p class="description">Helping businesses grow online with SEO, social media marketing, and data-driven
-                strategies to boost visibility and engagement.</p>
-            </div>
-          </div>
-
-          <!-- Custom Software -->
-          <div class="col-lg-4">
-            <div class="box wow fadeInRight" data-wow-delay="0.8s">
-              <div class="icon"><i class="fa fa-cogs"></i></div>
-              <h4 class="title"><a href="">Custom Software Development</a></h4>
-              <p class="description">Crafting tailored software solutions to address unique challenges and enhance
-                operational efficiency.</p>
-            </div>
-          </div>
-
-          <!-- Design & Branding -->
-          <div class="col-lg-4">
-            <div class="box wow fadeInLeft" data-wow-delay="1s">
-              <div class="icon"><i class="fa fa-paint-brush"></i></div>
-              <h4 class="title"><a href="">Design & Branding</a></h4>
-              <p class="description">From visually captivating posters, logos, brochures, pamphlets, to sleek visiting
-                cards, we create design works that reflect your brand's identity and leave a lasting impression.</p>
-            </div>
-          </div>
-
-          <!-- Online Government Services -->
-          <div class="col-lg-4">
-            <div class="box wow fadeInRight" data-wow-delay="1.2s">
-              <div class="icon"><i class="fa fa-globe"></i></div>
-              <h4 class="title"><a href="">Online Services</a></h4>
-              <p class="description">We assist you in navigating through government online services such as passport
-                applications, PAN card processing, voter ID registrations, and more, ensuring a smooth and hassle-free
-                experience.</p>
-            </div>
-          </div>
-
-          <!-- Gift Works -->
-          <div class="col-lg-4">
-            <div class="box wow fadeInRight" data-wow-delay="1.2s">
-              <div class="icon"><i class="fa fa-globe"></i></div>
-              <h4 class="title"><a href="">Gift Works</a></h4>
-              <p class="description">We offer a wide range of personalized creative services,including crafting unique
-                and memorable gifts,
-                expert photo
-                editing and custom framing, engaging 'Save the Date' videos for special events, and lifelike pencil
-                portraits that
-                capture your likeness beautifully.</p>
-            </div>
-          </div>
-
+          <h3 class="service-title">Web & App Development</h3>
+          <p class="service-description">Creating responsive, scalable applications using cutting-edge technologies and
+            modern development practices.</p>
         </div>
 
+        <div class="service-card">
+          <div class="service-icon">
+            <i class="fa fa-users"></i>
+          </div>
+          <h3 class="service-title">Community Programs</h3>
+          <p class="service-description">Fostering innovation through hackathons, workshops, and collaborative tech
+            communities.</p>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon">
+            <i class="fa fa-sitemap"></i>
+          </div>
+          <h3 class="service-title">ERP Solutions</h3>
+          <p class="service-description">Custom ERPNext implementations to streamline operations and boost business
+            efficiency.</p>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon">
+            <i class="fa fa-bullhorn"></i>
+          </div>
+          <h3 class="service-title">Digital Marketing</h3>
+          <p class="service-description">Data-driven strategies for SEO, social media, and digital presence
+            optimization.
+          </p>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon">
+            <i class="fa fa-cogs"></i>
+          </div>
+          <h3 class="service-title">Custom Software</h3>
+          <p class="service-description">Tailored software solutions that address unique business challenges and drive
+            growth.</p>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon">
+            <i class="fa fa-paint-brush"></i>
+          </div>
+          <h3 class="service-title">Design & Branding</h3>
+          <p class="service-description">Creative design solutions from logos to marketing materials that build strong
+            brand
+            identity.</p>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon">
+            <i class="fa fa-globe"></i>
+          </div>
+          <h3 class="service-title">Online Services</h3>
+          <p class="service-description">Streamlined assistance for government services and digital documentation
+            processes.
+          </p>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon">
+            <i class="fa fa-gift"></i>
+          </div>
+          <h3 class="service-title">Creative Services</h3>
+          <p class="service-description">Personalized creative solutions including custom gifts, photo editing, and
+            portrait
+            services.</p>
+        </div>
       </div>
     </section><!-- #services -->
 
-    <!--==========================
-    About Section
-  ============================-->
-    <section id="about" class="wow fadeInUp">
+    <!--About Section-->
+    <section class="about-section">
       <div class="container">
-        <div class="section-header">
-          <h2>About Nexnova Technologies</h2>
-          <p>Nexnova Technologies is a dynamic tech solutions provider committed to delivering innovative software, web
-            development, and mobile application services. Our expertise lies in leveraging cutting-edge technologies to
-            empower businesses and drive digital transformation.</p>
-        </div>
-        <div class="row">
-          <div class="col-lg-8 content">
-            <h2>Innovating for a Better Tomorrow</h2>
-            <h3>We specialize in creating robust, scalable, and user-friendly digital solutions tailored to meet diverse
-              business needs.</h3>
-            <p>Our team of professionals is dedicated to offering seamless services, from ideation to execution,
-              ensuring
-              quality and customer satisfaction at every step.</p>
-            <ul>
-              <li><i class="icon ion-ios-checkmark-outline"></i> Custom software development for businesses of all
-                sizes.
-              </li>
-              <li><i class="icon ion-ios-checkmark-outline"></i> Web and mobile application solutions for modern
-                enterprises.</li>
-              <li><i class="icon ion-ios-checkmark-outline"></i> Support for emerging startups through training
-                initiatives
-                at Nexnova Institute of Technologies.</li>
-            </ul>
+        <div class="tech-grid">
+          <div class="about-content">
+            <h2 class="section-title">Pioneering Digital Innovation</h2>
+            <p class="highlight-text">Transforming ideas into powerful digital solutions</p>
+            <p class="about-description">
+              At Nexnova Technologies, we're at the forefront of digital transformation,
+              leveraging cutting-edge technologies to solve complex business challenges.
+              Our expertise spans across innovative software development, AI-driven solutions,
+              and scalable cloud architectures.
+            </p>
+            <div class="tech-features">
+              <div class="feature-card">
+                <div class="feature-icon">⚡</div>
+                <h3 class="feature-title">Custom Development</h3>
+                <p class="feature-text">Tailored software solutions built with cutting-edge technologies</p>
+              </div>
+              <div class="feature-card">
+                <div class="feature-icon">🚀</div>
+                <h3 class="feature-title">Cloud Solutions</h3>
+                <p class="feature-text">Scalable and secure cloud infrastructure for modern enterprises</p>
+              </div>
+              <div class="feature-card">
+                <div class="feature-icon">🔮</div>
+                <h3 class="feature-title">AI & Machine Learning</h3>
+                <p class="feature-text">Intelligent solutions powered by advanced algorithms</p>
+              </div>
+              <div class="feature-card">
+                <div class="feature-icon">🎯</div>
+                <h3 class="feature-title">Digital Strategy</h3>
+                <p class="feature-text">Strategic consulting for digital transformation</p>
+              </div>
+            </div>
           </div>
-          <div class="col-lg-4 about-img">
-            <img src="img/logo.png" alt="Nexnova Technologies">
+          <div class="tech-image-container">
+            <div class="floating-dots dots-1"></div>
+            <div class="floating-dots dots-2"></div>
+            <img src="img/about.jpg" alt="Technology Innovation" class="tech-image">
           </div>
         </div>
       </div>
-    </section><!-- #about -->
+    </section>
+
+    <!--About Section End-->
+
+
 
     <!--==========================
     Clients Section
   ============================-->
-    <section id="clients" class="wow fadeInUp">
+    <section class="clients-section">
+      <div class="tech-circuit"></div>
+
       <div class="container">
         <div class="section-header">
-          <h2>Our Clients</h2>
-          <p>We are proud to have partnered with a diverse range of clients, delivering innovative solutions that meet
-            their
-            unique business needs. Here are some of the esteemed organizations we've worked with:</p>
+          <h2>Our Trusted Partners</h2>
+          <p>Collaborating with industry leaders to deliver innovative solutions that drive digital transformation</p>
         </div>
 
-        <div class="owl-carousel clients-carousel">
-          <a href="https://siffjeddah.com/" target="_blank" rel="noopener">
-            <img src="img/clients/siff.png" alt=" Saudi Indian Football Forum">
-          </a>
-          <a href="https://adulusman.github.io/JP-Eductaion-Services/" target="_blank" rel="noopener">
-            <img src="img/clients/jp_eduction.jpeg" alt="JP Education Services">
-          </a>
-          <a href="https://swedishpharma.in/" target="_blank" rel="noopener">
-            <img src="img/clients/SwedishPharma.jpeg" alt="Swedish Pharma">
-          </a>
-          <a href="" target="_blank" rel="noopener">
-            <img src="img/clients/khaleef_png.png" alt="Khaleef Groom Studio">
-          </a>
-          <a href="https://adulusman.github.io/Manjaribooks/" target="_blank" rel="noopener">
-            <img src="img/clients/manjari.png" alt="Manjari Books">
-          </a>
-          <a href="" target="_blank" rel="noopener">
-            <img src="img/clients/bapoos_yathra.png" alt="Bappoos Yathras">
-          </a>
-        </div>
+        <div class="clients-grid">
+          <div class="client-card">
+            <div class="client-logo">
+              <img src="img/clients/siff.png" alt="Saudi Indian Football Forum">
+            </div>
+            <div class="client-info">
+              <h5>Saudi Indian Football Forum</h>
+            </div>
+          </div>
 
+          <div class="client-card">
+            <div class="client-logo">
+              <img src="img/clients/jp_eduction.jpeg" alt="JP Education Services">
+            </div>
+            <div class="client-info">
+              <h5>JP Education Services</h5>
+            </div>
+          </div>
+
+          <div class="client-card">
+            <div class="client-logo">
+              <img src="img/clients/SwedishPharma.jpeg" alt="Swedish Pharma">
+            </div>
+            <div class="client-info">
+              <h5>Swedish Pharma</h5>
+            </div>
+          </div>
+
+          <div class="client-card">
+            <div class="client-logo">
+              <img src="img/clients/khaleef_png.png" alt="Khaleef Groom Studio">
+            </div>
+            <div class="client-info">
+              <h5>Khaleef Groom Studio</h5>
+            </div>
+          </div>
+
+          <div class="client-card">
+            <div class="client-logo">
+              <img src="img/clients/manjari.png" alt="Manjari Books">
+            </div>
+            <div class="client-info">
+              <h5>Manjari Books</h5>
+            </div>
+          </div>
+
+          <div class="client-card">
+            <div class="client-logo">
+              <img src="img/clients/bapoos_yathra.png" alt="Bappoos Yathras">
+            </div>
+            <div class="client-info">
+              <h5>Bappoos Yathras</h5>
+            </div>
+          </div>
+        </div>
       </div>
-    </section><!-- #clients -->
+    </section>
+    <!-- #clients -->
 
 
     <!--==========================
@@ -608,7 +639,7 @@ License: https://nexnovatechnologies.com/license
             <a class="cta-btn align-middle" href="#contact">Contact Us</a>
           </div>
           <div class="col-lg-6 cta-btn-container text-center">
-            <img src="img/action-img.jpg" alt="">
+            <img src="img/about.jpg" alt="">
           </div>
         </div>
 
