--- a/index.html
+++ b/index.html
@@ -9,14 +9,33 @@ License: https://nexnovatechnologies.com/license
 
 <head>
   <meta charset="utf-8">
-  <title>Nexnova Technologies</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
-  <meta content="Author" name="nexnovatechnologies">
+  <title>Best App Development Company | Nexnova Technologies Pvt Ltd</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+  <meta name="keywords"
+    content="Nexnova Technologies, Best App Development Company, Custom Software Solutions, Mobile App Development, Flutter App Development">
+
+  <meta name="description"
+    content="Nexnova Technologies - The best app development company in Kerala, offering custom software and mobile app solutions for businesses of all sizes.">
+
+  <meta name="author" content="Nexnova Technologies Pvt Ltd">
+  <link rel="canonical" href="https://nexnovatechnologies.in/">
+
+
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="icon" href="img/favicon-16x16.png" sizes="32x32">
+  <link rel="icon" href="img/favicon-32x32.png" sizes="16x16">
+
+  <!-- <link href="img/favicon.png" rel="icon">
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon"> -->
+
+  <meta property="og:title" content="Nexnova Technologies - Best App Development Company">
+  <meta property="og:description" content="Custom software and mobile app solutions for businesses of all sizes.">
+  <meta property="og:image" content="https://nexnovatechnologies.in/img/og-image.jpg">
+  <meta property="og:url" content="https://nexnovatechnologies.in/">
+  <meta property="og:type" content="website">
+
 
   <!-- Google Fonts -->
   <link
@@ -36,6 +55,23 @@ License: https://nexnovatechnologies.com/license
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Nexnova Technologies",
+    "url": "https://nexnovatechnologies.in/",
+    "description": "The best app development company offering innovative software solutions.",
+    "applicationCategory": "BusinessApplication",
+    "publisher": {
+      "@type": "Organization",
+      "name": "Nexnova Technologies Pvt Ltd",
+      "url": "https://nexnovatechnologies.in/"
+    }
+  }
+  </script>
+
 </head>
 
 <body id="body">
