--- a/index.html
+++ b/index.html
@@ -79,72 +79,78 @@ License: https://nexnovatechnologies.com/license
   <!--==========================
     Top Bar
   ============================-->
-  <section id="topbar">
-    <div class="container">
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="contact-info">
-          <a href="mailto:nexnovatechnologies@gmail.com">
-            <i class="fa fa-envelope-o"></i>
-            nexnovatechnologies@gmail.com
-          </a>
-          <a href="tel:+917306121517">
-            <i class="fa fa-phone"></i>
-            +91 7306 12 15 17
-          </a>
-        </div>
-        <div class="social-links">
-          <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-          <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-          <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-          <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-        </div>
+<section id="topbar">
+  <div class="container">
+    <div class="d-flex justify-content-between align-items-center">
+      <div class="contact-info">
+        <a href="mailto:nexnovatechnologies@gmail.com">
+          <i class="fa fa-envelope-o"></i>
+          nexnovatechnologies@gmail.com
+        </a>
+        <a href="tel:+917306121517">
+          <i class="fa fa-phone"></i>
+          +91 7306 12 15 17
+        </a>
+      </div>
+      <div class="social-links">
+        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+        <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+        <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
       </div>
     </div>
-  </section>
+  </div>
+</section>
   <!--==========================
   Header
 ============================-->
-  <header id="header">
-    <div class="header-container">
-      <div id="logo">
-        <a href="#body">
-          <img src="img/logo_1.png" alt="Nexnova Technologies Logo" title="Nexnova Technologies">
-        </a>
-      </div>
-
-      <button id="mobile-nav-toggle">
-        <i class="fa fa-bars"></i>
-      </button>
-
-      <nav id="nav-menu-container">
-        <ul class="nav-menu">
-          <li class="menu-active"><a href="#body">Home</a></li>
-          <li><a href="#services">We Do</a></li>
-          <li><a href="#about">Who We</a></li>
-          <li><a href="#portfolio">Gallery</a></li>
-          <li><a href="#team">Team</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+<header id="header">
+  <div class="header-container">
+    <div id="logo">
+      <a href="#body">
+        <img src="img/logo_1.png" alt="Nexnova Technologies Logo" title="Nexnova Technologies">
+      </a>
     </div>
-  </header>
+
+    <button id="mobile-nav-toggle" aria-label="Toggle Navigation">
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </button>
+
+    <nav id="nav-menu-container">
+      <ul class="nav-menu">
+        <li class="menu-active"><a href="#body"><span>Home</span></a></li>
+        <li><a href="#services"><span>We Do</span></a></li>
+        <li><a href="#about"><span>Who We</span></a></li>
+        <li><a href="#portfolio"><span>Gallery</span></a></li>
+        <li><a href="#team"><span>Team</span></a></li>
+        <li><a href="#contact"><span>Contact</span></a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
   <!-- #header -->
 
   <!--==========================
     Intro Section
   ============================-->
-  <section id="intro">
+<section id="intro">
+  <div class="animated-bg">
+    <div class="floating-particles" id="particles-js"></div>
+    <div class="gradient-overlay"></div>
+  </div>
 
-    <div class="intro-content">
-      <h2><span>Empowering Innovation.</span><br>Building the Future with Technology.</h2>
-      <div>
-        <a href="#about" class="btn-get-started scrollto">Book Now</a>
-      </div>
-    </div>
-    <div class="item" style="background-image: url('img/intro-carousel/1.gif');"></div>
-  </section><!-- #intro -->
-
-  <main id="main">
+  <div class="intro-content">
+    <h2>Transforming Ideas into
+      <span class="typed" data-typed-items="Digital Reality, Innovative Solutions, Tech Excellence"></span>
+    </h2>
+    <p>Building tomorrow's technology with today's innovation</p>
+    <a href="#about" class="btn-get-started scrollto">Get Started</a>
+  </div>
+</section>
 
 
     <!--==========================
