--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@ License: https://nexnovatechnologies.com/license
 
 <head>
   <meta charset="utf-8">
+ 
+
   <title>Best App Development Company | Nexnova Technologies Pvt Ltd</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
+ <meta name="robots" content="index, follow">
   <meta name="keywords"
     content="Nexnova Technologies, Best App Development Company, Custom Software Solutions, Mobile App Development, Flutter App Development">
 
@@ -87,7 +89,7 @@ License: https://nexnovatechnologies.com/license
           <a href="#" class="logo">
             <img src="img/logo_1.png" alt="Nexnova Technologies" class="logo-img">
           </a>
-         
+
 
           <!-- Navigation Menu -->
           <ul class="nav-menu">
@@ -112,58 +114,58 @@ License: https://nexnovatechnologies.com/license
   <!--==========================
     Intro Section
   ============================-->
-<section id="intro">
-  <div class="circuit-overlay"></div>
-  <div class="floating-icons">
-    <!-- Tech icons using SVG -->
-    <svg class="tech-icon" style="top: 20%; left: 10%" width="40" height="40" viewBox="0 0 24 24">
-      <path fill="#64ffda" d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-    </svg>
-    <svg class="tech-icon" style="top: 70%; left: 80%" width="40" height="40" viewBox="0 0 24 24">
-      <path fill="#6366f1"
-        d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z">
-      </path>
-    </svg>
-    <svg class="tech-icon" style="top: 30%; left: 85%" width="40" height="40" viewBox="0 0 24 24">
-      <path fill="#00bcd4" d="M12 6v12M6 12h12"></path>
-    </svg>
-    <!-- Code icon -->
-    <svg class="tech-icon" style="top: 40%; left: 20%" width="40" height="40" viewBox="0 0 24 24">
-      <path fill="#64ffda" d="M16 18l6-6-6-6M8 6l-6 6 6 6" />
-    </svg>
-    <!-- Cloud icon -->
-    <svg class="tech-icon" style="top: 60%; left: 30%" width="40" height="40" viewBox="0 0 24 24">
-      <path fill="#6366f1" d="M18 10h-1.26A8 8 0 1 0 9 20h9a5 5 0 0 0 0-10z" />
-    </svg>
-    <!-- Database icon -->
-    <svg class="tech-icon" style="top: 25%; left: 70%" width="40" height="40" viewBox="0 0 24 24">
-      <path fill="#00bcd4"
-        d="M12 2C6.48 2 2 4.48 2 7v10c0 2.52 4.48 5 10 5s10-2.48 10-5V7c0-2.52-4.48-5-10-5zm0 13c-5.52 0-10-2.48-10-5s4.48-5 10-5 10 2.48 10 5-4.48 5-10 5z" />
-    </svg>
-    <!-- AI/Brain icon -->
-    <svg class="tech-icon" style="top: 45%; left: 60%" width="40" height="40" viewBox="0 0 24 24">
-      <path fill="#64ffda" d="M12 2a9 9 0 0 0-9 9v7.5L9 12l3 6 3-6 6 6.5V11a9 9 0 0 0-9-9z" />
-    </svg>
-    <svg class="tech-icon" style="top: 10%; left: 80%" width="40" height="40" viewBox="0 0 24 24">
-      <path fill="#6366f1"
-        d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z">
-      </path>
-    </svg>
-    <svg class="tech-icon" style="bottom: 10%; left: 10%" width="40" height="40" viewBox="0 0 24 24">
-      <path fill="#6366f1"
-        d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z">
-      </path>
-    </svg>
-   
-  </div>
-  <div class="intro-content">
-    <h2>Transforming Ideas into<br>
-      <span class="gradient-text">Digital Innovation</span>
-    </h2>
-    <p>Where cutting-edge technology meets limitless possibilities</p>
-    <a href="#about" class="btn-get-started">Explore Our Solutions</a>
-  </div>
-</section>
+  <section id="intro">
+    <div class="circuit-overlay"></div>
+    <div class="floating-icons">
+      <!-- Tech icons using SVG -->
+      <svg class="tech-icon" style="top: 20%; left: 10%" width="40" height="40" viewBox="0 0 24 24">
+        <path fill="#64ffda" d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+      </svg>
+      <svg class="tech-icon" style="top: 70%; left: 80%" width="40" height="40" viewBox="0 0 24 24">
+        <path fill="#6366f1"
+          d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z">
+        </path>
+      </svg>
+      <svg class="tech-icon" style="top: 30%; left: 85%" width="40" height="40" viewBox="0 0 24 24">
+        <path fill="#00bcd4" d="M12 6v12M6 12h12"></path>
+      </svg>
+      <!-- Code icon -->
+      <svg class="tech-icon" style="top: 40%; left: 20%" width="40" height="40" viewBox="0 0 24 24">
+        <path fill="#64ffda" d="M16 18l6-6-6-6M8 6l-6 6 6 6" />
+      </svg>
+      <!-- Cloud icon -->
+      <svg class="tech-icon" style="top: 60%; left: 30%" width="40" height="40" viewBox="0 0 24 24">
+        <path fill="#6366f1" d="M18 10h-1.26A8 8 0 1 0 9 20h9a5 5 0 0 0 0-10z" />
+      </svg>
+      <!-- Database icon -->
+      <svg class="tech-icon" style="top: 25%; left: 70%" width="40" height="40" viewBox="0 0 24 24">
+        <path fill="#00bcd4"
+          d="M12 2C6.48 2 2 4.48 2 7v10c0 2.52 4.48 5 10 5s10-2.48 10-5V7c0-2.52-4.48-5-10-5zm0 13c-5.52 0-10-2.48-10-5s4.48-5 10-5 10 2.48 10 5-4.48 5-10 5z" />
+      </svg>
+      <!-- AI/Brain icon -->
+      <svg class="tech-icon" style="top: 45%; left: 60%" width="40" height="40" viewBox="0 0 24 24">
+        <path fill="#64ffda" d="M12 2a9 9 0 0 0-9 9v7.5L9 12l3 6 3-6 6 6.5V11a9 9 0 0 0-9-9z" />
+      </svg>
+      <svg class="tech-icon" style="top: 10%; left: 80%" width="40" height="40" viewBox="0 0 24 24">
+        <path fill="#6366f1"
+          d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z">
+        </path>
+      </svg>
+      <svg class="tech-icon" style="bottom: 10%; left: 10%" width="40" height="40" viewBox="0 0 24 24">
+        <path fill="#6366f1"
+          d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z">
+        </path>
+      </svg>
+
+    </div>
+    <div class="intro-content">
+      <h2>Transforming Ideas into<br>
+        <span class="gradient-text">Digital Innovation</span>
+      </h2>
+      <p>Where cutting-edge technology meets limitless possibilities</p>
+      <a href="#about" class="btn-get-started">Explore Our Solutions</a>
+    </div>
+  </section>
 
   <!--==========================
   Services Section
@@ -379,6 +381,25 @@ License: https://nexnovatechnologies.com/license
             <h5>Bappoos Yathras</h5>
           </div>
         </div>
+
+        <div class="client-card">
+          <div class="client-logo">
+            <img src="img/clients/infinity.png" alt="Infinity Tattoo Studio">
+          </div>
+          <div class="client-info">
+            <h5>Infinity Tattoo Studio</h5>
+          </div>
+        </div>
+
+        <div class="client-card">
+          <div class="client-logo">
+            <img src="img/clients/sminkapng.png" alt="Sminka Bridal Academy">
+          </div>
+          <div class="client-info">
+            <h5>Sminka Bridal Academy</h5>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
@@ -518,60 +539,63 @@ License: https://nexnovatechnologies.com/license
   <!--==========================
       Testimonials Section
     ============================-->
-<section class="testimonials-section">
-  <div class="testimonials-container">
-    <div class="testimonials-header">
-      <h2>What Our Clients Say</h2>
-      <p>Discover how we're helping businesses transform their digital presence and achieve remarkable results through
-        innovative technology solutions.</p>
+  <section class="testimonials-section">
+    <div class="testimonials-container">
+      <div class="testimonials-header">
+        <h2>What Our Clients Say</h2>
+        <p>Discover how we're helping businesses transform their digital presence and achieve remarkable results through
+          innovative technology solutions.</p>
+      </div>
+
+      <div class="testimonials-grid">
+        <div class="testimonial-card">
+          <div class="testimonial-content">
+            <div class="quote-icon">❝</div>
+            <p class="testimonial-text">The app's design, functionality, and user experience far exceed our
+              expectations.
+              It's been a pleasure working with such a talented and innovative team. Thank you, Nexnova Technologies,
+              for
+              delivering such a top-notch product!</p>
+            <div class="testimonial-author">
+              <div class="author-info">
+                <h3>Khaleef Groom Studio</h3>
+                <h4>CEO & Founder</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="testimonial-card">
+          <div class="testimonial-content">
+            <div class="quote-icon">❝</div>
+            <p class="testimonial-text">I recently received a poster from Nexnova Technologies, and I am truly impressed
+              with the design and quality. The poster is visually appealing, with a modern and professional layout that
+              perfectly represents our brand.</p>
+            <div class="testimonial-author">
+              <div class="author-info">
+                <h3>Sayana K</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="testimonial-card">
+          <div class="testimonial-content">
+            <div class="quote-icon">❝</div>
+            <p class="testimonial-text">Thanks Nexnova team for giving us a wonderful website. I appreciate the whole
+              team
+              Nexnova. The technical expertise and attention to detail were outstanding. I definitely recommend to my
+              friends.</p>
+            <div class="testimonial-author">
+              <div class="author-info">
+                <h3>Jakson Mathew</h3>
+                <h4>Swedish Pharma</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-    <div class="testimonials-grid">
-      <div class="testimonial-card">
-        <div class="testimonial-content">
-          <div class="quote-icon">❝</div>
-          <p class="testimonial-text">The app's design, functionality, and user experience far exceed our expectations.
-            It's been a pleasure working with such a talented and innovative team. Thank you, Nexnova Technologies, for
-            delivering such a top-notch product!</p>
-          <div class="testimonial-author">
-            <div class="author-info">
-              <h3>Khaleef Groom Studio</h3>
-              <h4>CEO & Founder</h4>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="testimonial-card">
-        <div class="testimonial-content">
-          <div class="quote-icon">❝</div>
-          <p class="testimonial-text">I recently received a poster from Nexnova Technologies, and I am truly impressed
-            with the design and quality. The poster is visually appealing, with a modern and professional layout that
-            perfectly represents our brand.</p>
-          <div class="testimonial-author">
-            <div class="author-info">
-              <h3>Sayana K</h3>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="testimonial-card">
-        <div class="testimonial-content">
-          <div class="quote-icon">❝</div>
-          <p class="testimonial-text">Thanks Nexnova team for giving us a wonderful website. I appreciate the whole team
-            Nexnova. The technical expertise and attention to detail were outstanding. I definitely recommend to my
-            friends.</p>
-          <div class="testimonial-author">
-            <div class="author-info">
-              <h3>Jakson Mathew</h3>
-              <h4>Swedish Pharma</h4>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   </section>
 
   <!--==========================
@@ -589,7 +613,7 @@ License: https://nexnovatechnologies.com/license
           <a class="cta-btn align-middle" href="#contact">Contact Us</a>
         </div>
         <div class="col-lg-6 cta-btn-container text-center">
-          <img src="img/about.jpg" alt="">
+          <img src="img/about.jpg" alt="Nexnova Technologies About">
         </div>
       </div>
 
@@ -606,7 +630,7 @@ License: https://nexnovatechnologies.com/license
         <h2>Our Team</h2>
         <p>Meet the innovative minds behind Nexnova Technologies</p>
       </div>
-  
+
       <div class="team-grid">
         <div class="team-card">
           <div class="profile-img">
@@ -635,7 +659,7 @@ License: https://nexnovatechnologies.com/license
             </a>
           </div>
         </div>
-  
+
         <div class="team-card">
           <div class="profile-img">
             <img src="img/shaima.jpeg" alt="Shaima Raiheen">
@@ -657,7 +681,7 @@ License: https://nexnovatechnologies.com/license
             </a>
           </div>
         </div>
-  
+
         <div class="team-card">
           <div class="profile-img">
             <img src="img/basith.jpg" alt="Ahammed Basith">
@@ -704,6 +728,11 @@ License: https://nexnovatechnologies.com/license
             <i class="ion-ios-email-outline"></i>
             <h3>Email</h3>
             <p><a href="mailto:nexnovatechnologies@gmail.com">nexnovatechnologies@gmail.com</a></p>
+          </div>
+          <div class="contact-email">
+            <i class="fa fa-instagram"></i>
+            <h3>Instagram</h3>
+            <p><a href="https://www.instagram.com/nexnova.technologies/">@nexnova.technologies</a></p>
           </div>
         </div>
         <div class="col-lg-7">
