--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@ License: https://nexnovatechnologies.com/license
 
 <head>
   <meta charset="utf-8">
- 
 
-  <title>Best App Development Company | Nexnova Technologies Pvt Ltd</title>
+
+  <title>Best App Development Company | Nexnova Technologies Pvt Ltd (Naxnova, Nexalnova)</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
- <meta name="robots" content="index, follow">
+  <meta name="robots" content="index, follow">
   <meta name="keywords"
     content="Nexnova Technologies, Best App Development Company, Custom Software Solutions, Mobile App Development, Flutter App Development">
-
+  <meta name="keywords"
+    content="Nexnova Technologies, Naxnova Technologies, Nexalnova Technologies, web development, app development, digital marketing, Kerala">
   <meta name="description"
     content="Nexnova Technologies - The best app development company in Kerala, offering custom software and mobile app solutions for businesses of all sizes.">
 
@@ -634,7 +635,7 @@ License: https://nexnovatechnologies.com/license
       <div class="team-grid">
         <div class="team-card">
           <div class="profile-img">
-            <img src="img/adul.jpg" alt="Adul">
+            <img src="img/adul.jpg" alt="Adulusman">
           </div>
           <h3>Adul</h3>
           <p>Chief Executive Officer</p>
@@ -662,7 +663,7 @@ License: https://nexnovatechnologies.com/license
 
         <div class="team-card">
           <div class="profile-img">
-            <img src="img/shaima.jpeg" alt="Shaima Raiheen">
+            <img src="img/shaima.jpeg" alt="Expert App Developers at Nexnova Technologies">
           </div>
           <h3>Shaima Raiheen</h3>
           <p>Chief Technology Officer</p>
@@ -684,7 +685,7 @@ License: https://nexnovatechnologies.com/license
 
         <div class="team-card">
           <div class="profile-img">
-            <img src="img/basith.jpg" alt="Ahammed Basith">
+            <img src="img/basith.jpg" alt="Expert App Developers at Nexnova Technologies">
           </div>
           <h3>Ahammed Basith</h3>
           <p>Senior Software Engineer</p>
@@ -782,6 +783,8 @@ License: https://nexnovatechnologies.com/license
         width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+
+
 
   </section><!-- #contact -->
 
