--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ License: https://nexnovatechnologies.com/license
 
           <!-- Navigation Menu -->
           <ul class="nav-menu">
-            <li><a href="#intro" class="active">Home</a></li>
+            <li><a href="#intro">Home</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
@@ -167,6 +167,120 @@ License: https://nexnovatechnologies.com/license
       <a href="#about" class="btn-get-started">Explore Our Solutions</a>
     </div>
   </section>
+
+  <!--=====================
+  Reffer & Earn
+  =======================-->
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="container hero-content">
+      <h1>Earn Cash by Referring New Clients to Nexnova!</h1>
+      <p>Turn your network into rewards. Refer businesses and earn up to ₹5000 or more based on the project size!</p>
+      <a href="#benefits" class="btn">Start Referring Now</a>
+    </div>
+  </section>
+
+  <!-- How It Works Section -->
+  <section class="how-it-works">
+    <div class="container">
+      <h2>How It Works</h2>
+      <div class="steps">
+        <div class="step-card">
+          <svg class="tech-icon" width="40" height="40" viewBox="0 0 24 24">
+            <path fill="#64ffda" d="M12 2a9 9 0 0 0-9 9v7.5L9 12l3 6 3-6 6 6.5V11a9 9 0 0 0-9-9z" />
+          </svg>
+          <i class="fa fa-share-square"></i>
+          <h3>Share a Referral</h3>
+          <p>Send us your referrals by providing their contact information and project details.</p>
+        </div>
+        <div class="step-card">
+          <i class="fa fa-handshake-o"></i>
+          <h3>We Work Together</h3>
+          <p>Once your referral becomes our client, we'll deliver the project they need.</p>
+        </div>
+        <div class="step-card">
+          <i class="fa fa-gift"></i>
+          <h3>Earn Cash</h3>
+          <p>Get rewarded based on the size and scope of the project, starting at ₹500 for small websites!</p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Benefits Section -->
+  <section class="benefits" id="benefits">
+    <div class="container">
+      <h2>Why Refer Nexnova?</h2>
+      <div class="stats">
+        <div class="stat-item">
+          <div class="stat-number" data-target="26000">0</div>
+          <p>₹ Referrals Rewarded</p>
+        </div>
+        <div class="stat-item">
+          <div class="stat-number" data-target="50000">0</span></div>
+          <p>₹ Earned by Our Community</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FAQ Section -->
+  <section class="faq">
+    <div class="container">
+      <h2>Frequently Asked Questions</h2>
+      <div class="accordion">
+        <div class="accordion-item">
+          <div class="accordion-header">
+            How do I refer a client?
+            <i class="fa fa-chevron-down"></i>
+          </div>
+          <div class="accordion-content">
+            Simply click on the 'Submit a Referral Now' button and fill out the form.
+          </div>
+        </div>
+        <div class="accordion-item">
+          <div class="accordion-header">
+            How much can I earn?
+            <i class="fa fa-chevron-down"></i>
+          </div>
+          <div class="accordion-content">
+            You earn ₹500 for small projects, and higher rewards for larger ones depending on the quote and scope.
+          </div>
+        </div>
+        <div class="accordion-item">
+          <div class="accordion-header">
+            When will I get paid?
+            <i class="fa fa-chevron-down"></i>
+          </div>
+          <div class="accordion-content">
+            Once the project is completed and payment is received from the client, your reward will be sent within 7
+            days.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA Section -->
+  <section class="cta">
+    <div class="container">
+      <h2>Start Referring Today!</h2>
+      <div style="margin-top: 30px;">
+        <a href="https://api.whatsapp.com/send/?phone=7306121517" class="btn">Submit a Referral</a>
+        <a href="#contact" class="btn">Contact Us for More Info</a>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
 
   <!--==========================
   Services Section
