--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ License: https://nexnovatechnologies.com/license
     <div class="container hero-content">
       <h1>Earn Cash by Referring New Clients to Nexnova!</h1>
       <p>Turn your network into rewards. Refer businesses and earn up to ₹5000 or more based on the project size!</p>
-      <a href="#benefits" class="btn">Start Referring Now</a>
+      <a href="/forms.html" class="btn">Start Referring Now</a>
     </div>
   </section>
 
@@ -259,6 +259,15 @@ License: https://nexnovatechnologies.com/license
             days.
           </div>
         </div>
+        <div class="accordion-item">
+          <div class="accordion-header">
+            Terms & Conditions.
+            <i class="fa fa-chevron-down"></i>
+          </div>
+          <div class="accordion-content">
+            <a href="terms.html" style="color: black;">Read Terms & Condtion</a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -273,13 +282,6 @@ License: https://nexnovatechnologies.com/license
       </div>
     </div>
   </section>
-
-
-
-
-
-
-
 
 
   <!--==========================
